--- a/app/assets/styles/landing.css
+++ b/app/assets/styles/landing.css
@@ -34,7 +34,26 @@ html, body {
   text-align: center;
   padding: 50px;
   font-family: 'Aspire', sans-serif;
-  text-shadow: 0px 0px 50px rgba(255, 27, 27, 0.734);
+  text-shadow: 0px 0px 50px rgba(255, 27, 27, .7);
+  animation: movingGlow 2s infinite ease-in-out;
+}
+
+@keyframes movingGlow {
+  0% {
+    text-shadow: 0px 10px 50px rgba(255, 27, 27, 0.7), 0px 0px 50px rgba(255, 27, 27, 0.7);
+  }
+  25% {
+    text-shadow: 10px 0px 50px rgba(255, 27, 27, 0.7), 0px 0px 70px rgba(255, 27, 27, 0.7);
+  }
+  50% {
+    text-shadow: 0px -10px 50px rgba(255, 27, 27, 0.7), 0px 0px 70px rgba(255, 27, 27, 0.7);
+  }
+  75% {
+    text-shadow: -10px 0px 50px rgba(255, 27, 27, 0.7), 0px 0px 50px rgba(255, 27, 27, 0.7);
+  }
+  100% {
+    text-shadow: -5px 5px 50px rgba(255, 27, 27, 0.7), 0px 0px 50px rgba(255, 27, 27, 0.7);
+  }
 }
 
 .background-video {
