--- a/app/assets/styles/landing.css
+++ b/app/assets/styles/landing.css
@@ -104,17 +104,18 @@ html, body {
 
 .login-container {
   position: fixed;
-  top: 25px;
-  left: 25px;
+  top: 15px;
+  left: 15px;
   z-index: 1001;
   display: flex;
   align-items: center;
+  font-size: 0.85rem;
 }
 
 .login-container span {
   color: rgb(255, 54, 54);
   font-family: 'Aspire', sans-serif;
-  font-size: 1.35rem;
+  font-size: 1.1rem;
   line-height: 0.9;
   text-shadow: 0px 0px 50px rgba(255, 27, 27, 0.734);
   padding-left: 15px;
@@ -124,15 +125,15 @@ html, body {
   background-color: transparent;
   border: 2px solid rgb(255, 54, 54);
   color: rgb(255, 54, 54);
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 8px 16px;
+  font-size: 14px;
   cursor: pointer;
   border-radius: 12px;
   margin-left: 10px;
   transition: all 0.3s ease;
   font-family: 'Montserrat', sans-serif;
   position: relative;
-  width: 95px;
+  width: max-content;
 }
 
 .login-button:hover {
