--- a/app/assets/styles/login.css
+++ b/app/assets/styles/login.css
@@ -29,9 +29,11 @@
   }
   
   .login-heading {
-    font-size: 36px;
+    font-size: 4rem;
     font-weight: 700;
     margin-bottom: 30px;
+    font-family: 'Aspire', sans-serif;
+    text-shadow: 0px 0px 40px rgb(255 27 27);
   }
   
   .login-input-box {
@@ -44,10 +46,11 @@
     padding: 15px 45px 15px 20px;
     border: none;
     border-radius: 40px;
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0.08), rgba(255, 255, 255, 0.35));
-    color: white;
+    background: linear-gradient(90deg, rgb(251 201 201 / 8%), rgb(230 90 90 / 35%));
+    color: rgb(255, 0, 0);
     font-size: 16px;
     outline: none;
+    box-shadow: 0px 0px 7px 1px red;
   }
   
   .login-input-box input::placeholder {
@@ -66,7 +69,7 @@
   .login-submit-btn {
     width: 100%;
     padding: 12px;
-    background: white;
+    background: rgb(255, 0, 0);
     border: none;
     border-radius: 40px;
     font-size: 16px;
@@ -74,6 +77,7 @@
     color: #333;
     cursor: pointer;
     transition: background 0.3s ease, color 0.3s ease;
+    box-shadow: 0px 0px 20px 3px red;
   }
   
   .login-submit-btn:hover {
