--- a/app/assets/styles/register.css
+++ b/app/assets/styles/register.css
@@ -30,11 +30,13 @@
 }
 
 .register-heading {
-  font-size: 36px;
+  font-size: 3.5rem;
   font-weight: 700;
   text-align: center;
   margin-top: 15px;
   margin-bottom: 40px;
+  font-family: 'Aspire', sans-serif;
+  text-shadow: 0px 0px 40px rgb(255 27 27);
 }
 
 .register-grid-container {
@@ -56,6 +58,9 @@
   font-size: 16px;
   color: white;
   padding: 15px 45px 15px 20px;
+  background: linear-gradient(90deg, rgb(251 201 201 / 8%), rgb(230 90 90 / 35%));
+  color: rgb(255, 0, 0);
+  box-shadow: 0px 0px 7px 1px red;
 }
 
 .register-input-box input {
@@ -83,6 +88,7 @@
   width: 34%;
   height: 45px;
   background: white;
+  background: rgb(255, 0, 0);
   border: none;
   border-radius: 40px;
   cursor: pointer;
@@ -92,6 +98,7 @@
   margin: auto;
   margin-top: 40px;
   transition: background 0.3s ease, color 0.3s ease;
+  box-shadow: 0px 0px 20px 3px red;
 }
 
 .register-submit-btn:hover {
