--- a/app/assets/styles/landing.css
+++ b/app/assets/styles/landing.css
@@ -148,7 +148,7 @@ html, body {
   top: 100%;
   left: 0;
   color: rgb(255, 54, 54);
-  padding: 10px 10px;
+  padding: 10px 6px;
   font-size: 16px;
   border-radius: 12px 12px 12px 12px;
   z-index: -1;
@@ -156,7 +156,7 @@ html, body {
   transition: opacity 0.3s ease, transform 0.3s ease;
   transform: translateY(-10px);
   white-space: nowrap;
-  width: 70px;
+  width: max-content;
 }
 
 .sign-up:hover {
